--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "ts-loader": "^9.2.8",
+        "typescript": "^4.6.3"
     }
 }
