Base ts canvas template

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "tsc",
+        "ts-watch": "tsc --watch"
     },
     "devDependencies": {
         "axios": "^0.25",
