--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,8 @@
       "skipLibCheck": true,           // Skip type checking of declaration files
       "noImplicitAny": true          // Bypass raising errors on `any` type
     },
-    "include": ["resources/js/**/*"]  // Frontend paths pattern
+    "include": [
+      "resources/js/**/*",
+      "public/js/*"
+      ]  // Frontend paths pattern
   }
