--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
       "baseUrl": "./",
       "strict": true,                 // Enable strict type-checking options
       "skipLibCheck": true,           // Skip type checking of declaration files
-      "noImplicitAny": true          // Bypass raising errors on `any` type
+      "noImplicitAny": true,          // Bypass raising errors on `any` type
+      "outDir": "public/js",
+      "strictPropertyInitialization": false,
     },
-    "include": ["resources/js/**/*"]  // Frontend paths pattern
+    "include": [
+      "public/ts/*"
+    ]  // Frontend paths pattern
   }
