--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
         "ts-watch": "tsc --watch"
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.14",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "ts-loader": "^9.2.8",
         "typescript": "^4.6.3"
+    },
+    "dependencies": {
+        "jquery": "^3.6.0"
     }
 }
