--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "strictPropertyInitialization": false,
     },
     "include": [
-      "public/ts/*"
+      "public/ts/**/*", 
     ]  // Frontend paths pattern
   }
 
